[gd_scene load_steps=4 format=3 uid="uid://b1pf0y65s2hog"]

[ext_resource type="Script" uid="uid://bn2ywerooj3bc" path="res://Systems/MapChanger System/game_controller.gd" id="1_6uyvy"]
[ext_resource type="PackedScene" uid="uid://dx5hgnutxflij" path="res://Maps/GameWorldHub.tscn" id="2_bxjre"]
[ext_resource type="Script" uid="uid://bnfqu4tt64gmp" path="res://Systems/SaverLoader System/game_saver.gd" id="3_muttm"]

[node name="GameController" type="Node" node_paths=PackedStringArray("world_3d", "gui", "saver_loader")]
script = ExtResource("1_6uyvy")
world_3d = NodePath("World3D")
gui = NodePath("GUI")
saver_loader = NodePath("SaverLoader")

[node name="World3D" type="Node3D" parent="."]

[node name="HubWorld" parent="World3D" instance=ExtResource("2_bxjre")]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SaverLoader" type="Node" parent="."]
script = ExtResource("3_muttm")
